* Version 1.1
	* build 1
	* build 2
		* Supressed CMake error if Doxygen not found
		* Added build numbers
		* Set enscrypt_context variables to NULL after freeing memory
		* Added sanity checks to enscrypt_bin
	* build 3
		* enscrypt() and enscrypt_ms() returns error (-1) instead of defaulting to safe values
		* enscrypt_bin reports errors
	* build 4
		* some restructuring
		* basic android support
	* build 5
		* major restructuring
		* ARM Support (Though not optimized yet)
	* build 6
		* Android Library
		* Changed Progress callback's signature
	* build 7
		* Optimized for ARM (with NEON)
		* Cleaned up Build Scripts
		* Added ability to "cancel" from progress callback
	* build 8
		* Support for Windows (win32) platform