@@ -28,7 +28,7 @@
   
   <td style="padding-left: 0.5em;">
    <div id="projectname">EnScrypt
-   &#160;<span id="projectnumber">1.1build8</span>
+   &#160;<span id="projectnumber">1.1build9</span>
    </div>
    <div id="projectbrief">Scrypt based password hashing</div>
   </td>
