@@ -28,7 +28,7 @@
   
   <td style="padding-left: 0.5em;">
    <div id="projectname">EnScrypt
-   &#160;<span id="projectnumber">1.1build8</span>
+   &#160;<span id="projectnumber">1.1build9</span>
    </div>
    <div id="projectbrief">Scrypt based password hashing</div>
   </td>
@@ -72,7 +72,7 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
 <div class="title">EnScrypt </div>  </div>
 </div><!--header-->
 <div class="contents">
-<div class="textblock"><dl class="version"><dt><b>Version:</b></dt><dd>1.1 build 8 </dd></dl>
+<div class="textblock"><dl class="version"><dt><b>Version:</b></dt><dd>1.1 build 9 </dd></dl>
 <dl class="author"><dt><b>Author:</b></dt><dd>Adam Comley</dd></dl>
 <p>EnScrypt is an acceleration-resistant password hashing library and utility based on the memory-hard PBKDF Scrypt.</p>
 <p>Based on:</p>
